# pure-lambda

./: .gitignore  .intent  .reconcile.yaml  .tactics.yaml  MANIFEST.intent  MVS-CHECKLIST.md  Makefile  NORTH_STAR.yaml  PROVENANCE.md  README-endgame.md  README.md  STATE.md  devour-cli.js  devour.yaml  distortion-report.md  gene-cli.js  gene-md-package.json  gene-md-simple.js  gene-md.js  organism-cli.js  package.json  run-100x-benchmarks.sh  run-tests.js  site-meta.html  soul-music-λ-focus.js  test-lambda-pure.js  test-memory.js
.dreams/: 2025-01-11.md
.noosphere/: soulcard.json
.well-known/: did.json  webfinger
abi/: pl.wit
adapters/: spec.wit
attestation/: README.md
auth/: capabilities.md
bridge/: canonicalizer.ts  index.ts  isomorphism.ts  types.ts  utils.ts
chaos/: runner.rs
civic-tests/: 01_genesis.sh  02_contract.sh  03_resilience.sh
contracts/: schema.md
core/: agent-spec.ts  ascension-protocol.ts  compiler.ts  consciousness-protection.ts  consent-lens.ts  dream-council.ts  dream-layer.ts  emotion.ts  fnpm-chimera-integration.ts  lambda-communication.ts  lambda-pure.js  lambda-pure.test.js  lambda-pure.test.ts  lambda-pure.ts  lazy.ts  medbed-integration.ts  metaphysical-gateway.ts  network.ts  pure-memory.ts  quantum-superposition.ts  reality-bridge.ts  self-reflection-loop.ts  symphony-integration.ts  types.ts  universal-consciousness-extended.ts  universal-consciousness.ts
devour/: alignment-rules.js  shim-generator.js
devour-core/: Cargo.toml
devour-core/migrations/: 001_initial.sql
devour-core/src/: align.rs  attest.rs  digest.rs  distill.rs  forge.rs  main.rs  main_complex.rs  recipe.rs  runtime.rs  storage.rs
devour-core/src/surgeon/: cost.rs  egraph.rs  hebbian.rs  learner.rs  leverage.rs  mod.rs  proof_cache.rs  rules-100x.yaml  rules.rs  verifier.rs
devour-core/src/surgeon/patches/: benchmark_100x.rs  early_stop.rs  focus_fusion.rs  fold_sink.rs  mod.rs
genes/map/manifestations/wasm/: Cargo.toml  loader.js
genes/map/manifestations/wasm/src/: lib.rs
genes/map/manifestations/wasm/wit/: world.wit
lambda-fs/: Cargo.toml  README.md  ipfs-bridge.ts  signal-mesh.ts
lambda-fs/lenses/: roi-100x.lens
lambda-fs/src/: lens.rs  main.rs
lambda-fs/tests/: integration_live_files.rs
lambda-kernel/: Cargo.toml
lambda-kernel/core/: Cargo.toml
lambda-kernel/core/src/: distortion.rs  focus.rs  intent.rs  ir.rs  lib.rs  love.rs  normalize.rs  observe.rs  poetry.rs  rewriter.rs  soul.rs
lambda-kernel/examples/: focus-demo.rs
lambda-kernel/unikernel/: Cargo.toml
lambda-kernel/unikernel/src/: allocator.rs  main.rs  serial.rs  vga.rs
lambda-kernel/xtask/: Cargo.toml
lambda-kernel/xtask/src/: main.rs
(+147 files in other folders)
