[package]
name = "devour-core"
version = "0.1.0"
edition = "2021"
authors = ["s0fractal"]
description = "Native devourer - consumes ecosystems, distills to pure genes"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# Storage & Hashing
blake3 = "1.5"
hex = "0.4"
bincode = "1.3"
sled = "0.34"  # Embedded DB for CAS
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# WASM Runtime
wasmtime = "25.0"
wasmtime-wasi = "25.0"
wit-bindgen = "0.34"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"

# HTTP & Git
reqwest = { version = "0.12", features = ["json"] }
git2 = "0.19"
tar = "0.4"
flate2 = "1.0"

# Utilities
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.10"  # Parallel processing
dashmap = "6"    # Concurrent hashmap
petgraph = "0.6" # DAG for task scheduling
walkdir = "2"    # Directory traversal
chrono = "0.4"   # Time handling
fastrand = "2"   # Fast random number generation

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

# [[bench]]
# name = "digest"
# harness = false