[package]
name = "lambda-fs"
version = "0.1.0"
edition = "2021"
authors = ["s0fractal"]
description = "λFS - Reactive file system where reading materializes computation"

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
sha3 = "0.10"
hex = "0.4"

# CLI
clap = "4"

# Path patterns
regex = "1"

# Future: WASI integration
# wasmtime = "25.0"
# wasmtime-wasi = "25.0"

# Future: FUSE mount
# fuser = "0.14"

[dev-dependencies]
tempfile = "3"